<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.HomeActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_facility_gallery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_facility_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:scrollIndicators="bottom"
                android:scrollbars="horizontal">

                <LinearLayout
                    android:id="@+id/btn_gym_room"
                    style="@style/Rounded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        style="@style/Rounded.Button"
                        android:contentDescription="@string/text_gym_room"
                        android:src="@drawable/ic_gym_light_button" />

                    <TextView
                        style="@style/Rounded.Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_gym_room" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_tv_room"
                    style="@style/Rounded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        style="@style/Rounded.Button"
                        android:contentDescription="@string/text_tv_room"
                        android:src="@drawable/ic_tv_light_button" />

                    <TextView
                        style="@style/Rounded.Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_tv_room" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_laundry_room"
                    style="@style/Rounded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        style="@style/Rounded.Button"
                        android:contentDescription="@string/text_laundry_room"
                        android:src="@drawable/ic_laundry_light_button" />

                    <TextView
                        style="@style/Rounded.Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_laundry_room" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_billiard_room"
                    style="@style/Rounded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        style="@style/Rounded.Button"
                        android:contentDescription="@string/text_billiard_room"
                        android:src="@drawable/ic_pool_light_button" />

                    <TextView
                        style="@style/Rounded.Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_billiard_room" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_fitness_room"
                    style="@style/Rounded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        style="@style/Rounded.Button"
                        android:contentDescription="@string/text_fitness_room"
                        android:src="@drawable/ic_fitness_light_button" />

                    <TextView
                        style="@style/Rounded.Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_fitness_room" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btn_tennis_room"
                    style="@style/Rounded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageButton
                        style="@style/Rounded.Button"
                        android:contentDescription="@string/text_tennis_room"
                        android:src="@drawable/ic_tennis_light_button" />

                    <TextView
                        style="@style/Rounded.Label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_tennis_room" />

                </LinearLayout>

            </LinearLayout>

        </HorizontalScrollView>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_calendar_holder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="@+id/cv_facility_gallery"
        app:layout_constraintStart_toStartOf="@+id/cv_facility_gallery"
        app:layout_constraintTop_toBottomOf="@+id/cv_facility_gallery">

        <com.kizitonwose.calendarview.CalendarView
            android:id="@+id/exSevenCalendar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cv_dayViewResource="@layout/calendar_day"
            app:cv_orientation="horizontal"
            app:cv_scrollMode="continuous"
            app:cv_maxRowCount="1"/>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>